--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 const lastDigits = inputText1.substring(lastSlashPos + 1);
 
                 // Provided string
-                const baseUrl = getBaseUrl(inputText1)
+                const baseUrl = "https://zply.fun/"; //getBaseUrl(inputText1);
                 const baseString = baseUrl + "/m?=58930440712039689335/yQx6tfboNhaZeCjFUnYM4gFLXGx2/";
 
                 // Append the last digits to the base string
